# django-celery-monitor

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
celery_monitor/: admin.py  apps.py  models.py  queries.py  utils.py
celery_monitor/migrations/: 0001_create_status_counts_materialized_view.py
celery_monitor/queue_monitor/: __init__.py  base.py  redis.py
celery_monitor/results_monitor/: __init__.py  base.py  celery_results_mixin.py
celery_monitor/static/celery_monitor/: monitor.css
celery_monitor/templates/celery_monitor/: dashboard.html  task_detail.html  task_execution_stats.html
celery_monitor/templates/celery_monitor/partials/: queue_stats.html  queue_task_types.html  recent_tasks.html  status_counts.html  task_execution_stats.html  worker_stats.html
celery_monitor/templatetags/: celery_monitor_tags.py
tests/: factories.py  settings.py  settings_redis.py  settings_redis_with_celery_results.py  settings_with_celery_results.py  test_queue_monitor.py  test_results_monitor.py
