[project]
name = "django-celery-monitor"
version = "0.1.0"
description = "Reusable Django app for admin-based Celery task monitoring"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-celery-results>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["celery_monitor"]
