[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "django-celery-monitor"
version = "0.1.0"
description = "Django app for admin-based Celery task monitoring"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "celery>=5",
  "django>=5.2",
]

[dependency-groups]
dev = [
  "celery-types>=0.24",
  "django-stubs>=5.2.9",
]

[tool.hatch.build.targets.wheel]
packages = [ "celery_monitor" ]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
  "*.pyc",
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "migrations",
  "venv",
]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "E501", # line too long (handled by formatter)
]
lint.per-file-ignores."__init__.py" = [ "F401" ] # unused imports in __init__.py
lint.isort.known-first-party = [ "celery_monitor" ]
lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
