[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "django-celery-monitor"
version = "0.1.1"
description = "Django app for admin-based Celery task monitoring"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "celery>=5",
  "django>=4.2",
]

optional-dependencies.results = [
  "django-celery-results>=2.5",
]

[dependency-groups]
dev = [
  "celery-types>=0.24",
  "django-celery-results>=2.5",
  "django-stubs>=5.2.9",
  "factory-boy>=3.3.3",
  "fakeredis>=2.33",
  "pytest>=9.0.2",
  "pytest-django>=4.11.1",
  "ruff>=0.15",
  "time-machine>=3.2",
  "tox>=4.23",
  "tox-uv>=1.19",
]

[tool.hatch.build.targets.wheel]
packages = [ "celery_monitor" ]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
  "*.pyc",
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "migrations",
  "venv",
]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "E501", # line too long (handled by formatter)
]
lint.per-file-ignores."__init__.py" = [ "F401" ] # unused imports in __init__.py
lint.per-file-ignores."tests/**/*.py" = [
  "DJ008", # Model does not define __str__ method
  "F821",  # Undefined name
]
lint.isort.known-first-party = [ "celery_monitor" ]
lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.pytest.ini_options]
# By default, runs tests without django-celery-results in INSTALLED_APPS
# To run all tests including django-celery-results:
#   pytest --ds=tests.settings_with_celery_results
# To run both configurations:
#   tox  (recommended - runs all test environments)
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
testpaths = [ "tests" ]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
]

